2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* channel.py, configManager.py, sample.py, systematic.py: modifications to
	allow for new systematic types "normHistoSysEnvelopeSym",
	"histoSysEnvelopeSym", "overallNormHistoSysEnvelopeSym". These look at the
	bin content of the histogram and set the error to max(nom-low, high-nom);
	i.e. high' = nom + max(abs(nom-low), abs(high-nom)) and similar for low.
	Such types did not exist yet.
	* Same files: Added additional verbose statements to clarify what's going on to aid the
	user. 

2016-07-11 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/TEasyFormula.h: inherit from ROOT::v5::TFormula to ensure that our
	cutStr still works properly

2016-06-09 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: add model-dep and model-indep fit types as
	aliases of excl and disc
	* scripts/HistFitter.py: detect whether the input file exists and is a
	file _before_ calling execFile

2016-06-08 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/channel.py: addSample() would use the index of the last sample to
	check systematics, even if you specified an index. Now fixed. 

2016-06-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/configMgr.cxx: add stop condition for UL range extending at 5x
	points; change the error messages about min_CLs and max_CLs to reflect
	what they actually check (which is not the 1st and last but _any_ point)

2016-06-03 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/histogramsManager.py: add Logger. Also clearer error if input for user-defined
	systematic is wrong and the user probably meant to use a tree

2016-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/ConfigMgr.cxx: add mechanism to keep extending UL range if running
	in asymptotic mode. Will keep added points and merging
	HypoTestInverterResult until +2sigma band < 0.05 and the UL <0.9x the scan
	range. Also store the plot as pdf and png.
	* src/StatTools.cxx: roll back previous changes
